walkthrough video added

--- a/output/new.html
+++ b/output/new.html
@@ -20,74 +20,38 @@
             <div class="card-columns justify-content-center">
                 <div class="card">
         <div class="card-header bg-primary text-light">
-            <h2>mary</h2>
+            <h2>Mary Cohan</h2>
             <h4>Manager</h4>
         </div>
         <div class="card-body" style="background-color: #E5E8E8;">
             <ul class="list-group">
-                <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item"> Email: <a href="mailto:mary@gmail.com">mary@gmail.com</a></li>
-                <li class="list-group-item">Office Number: 23</li>
+                <li class="list-group-item">ID: 23</li>
+                <li class="list-group-item"> Email: <a href="mailto:mary.cohan@gmail.com">mary.cohan@gmail.com</a></li>
+                <li class="list-group-item">Office Number: 320</li>
             </ul>
         </div>
     </div><div class="card">
         <div class="card-header bg-info text-light">
-            <h2>mary</h2>
+            <h2>Engineer</h2>
             <h4>Engineer</h4>
         </div>
         <div class="card-body" style="background-color: #E5E8E8;">
             <ul class="list-group">
-                <li class="list-group-item">ID: 2</li>
-                <li class="list-group-item">Email: <a href="mailto:maryc@gmail.com">maryc@gmail.com</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/mary">mary</li>
-            </ul>
-        </div>
-    </div><div class="card">
-        <div class="card-header bg-info text-light">
-            <h2>mary3</h2>
-            <h4>Engineer</h4>
-        </div>
-        <div class="card-body" style="background-color: #E5E8E8;">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 3</li>
-                <li class="list-group-item">Email: <a href="mailto:mary3@gmail.com">mary3@gmail.com</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/mary3">mary3</li>
-            </ul>
-        </div>
-    </div><div class="card">
-        <div class="card-header bg-info text-light">
-            <h2>mary4</h2>
-            <h4>Engineer</h4>
-        </div>
-        <div class="card-body" style="background-color: #E5E8E8;">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 4</li>
-                <li class="list-group-item">Email: <a href="mailto:mary4@gmail.com">mary4@gmail.com</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/mary4">mary4</li>
+                <li class="list-group-item">ID: 42</li>
+                <li class="list-group-item">Email: <a href="mailto:engineer@gmail.com">engineer@gmail.com</a></li>
+                <li class="list-group-item">GitHub: <a href="https://github.com/mlcohn">mlcohn</li>
             </ul>
         </div>
     </div><div class="card">
         <div class="card-header bg-success text-light">
-            <h2>intern</h2>
+            <h2>Intern</h2>
             <h4>Intern</h4>
         </div>
         <div class="card-body" style="background-color: #E5E8E8;">
             <ul class="list-group">
-                <li class="list-group-item">ID: 5</li>
-                <li class="list-group-item">Email: <a href="mailto:intern@gmail.com">intern@gmail.com</a></li>
-                <li class="list-group-item">School: intern</li>
-            </ul>
-        </div>
-    </div><div class="card">
-        <div class="card-header bg-success text-light">
-            <h2>intern</h2>
-            <h4>Intern</h4>
-        </div>
-        <div class="card-body" style="background-color: #E5E8E8;">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 6</li>
-                <li class="list-group-item">Email: <a href="mailto:intern@uw.come">intern@uw.come</a></li>
-                <li class="list-group-item">School: 7</li>
+                <li class="list-group-item">ID: 33</li>
+                <li class="list-group-item">Email: <a href="mailto:intern@uw.org">intern@uw.org</a></li>
+                <li class="list-group-item">School: uw</li>
             </ul>
         </div>
     </div>
